# homefinder

./: .editorconfig  .gitignore  flake.nix  pyproject.toml  readme.md
